Kubernetes-Manifests-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
  annotations:
    alb.ingress.kubernetes.io/actions.api: >
      {"Type":"forward","ForwardConfig":{"TargetGroups":[{"ServiceName":"api","ServicePort":"3500"}]},"Conditions":[{"Field":"path-pattern","Values":["/api/*"]}]}
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /ok
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
